# VAIC

./: .gitignore  Cargo.toml  README.md  TODO.md
assets/: part_picker.ess
assets/environment_maps/: diffuse_rgb9e5_zstd.ktx2  specular_rgb9e5_zstd.ktx2
assets/models/: c-channel-1x2x1x1.glb  c-channel-1x2x1x25.glb  low_poly_duck.glb  low_poly_duck_combined.glb
src/: ;  actions.rs  constraints.rs  cursor.rs  main.rs  move_objects.rs  movement.rs  placing.rs  saving.rs  screenshot.rs  settings.rs
src/constraints/: add_constraints.rs  handle_constraints.rs  mod.rs  ui.rs
src/move_objects/: mod.rs  ui.rs
src/movement/: flycam.rs  mod.rs
src/movement/third_person_camera/: gamepad.rs  mod.rs  mouse.rs
src/part/: mod.rs  part_placer.rs
src/saving/: mod.rs  save.rs  save_timer.rs
src/ui/: general.rs  main_menu.rs  mod.rs  part_picker.rs  pause.rs  settings.rs
src/ui/editor/: handle.rs  mod.rs  part_selector.rs  parts.rs  parts_list.rs  top_bar.rs
