[package]
name = "vaic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = "z"  # Optimize for size.

[dependencies]
bevy = "0.13.0"
# until bevy_infinite_grid updates to bevy version 0.13
# bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_infinite_grid = {git = "https://github.com/XYCaptain/bevy_infinite_grid", branch = "main" }
smooth-bevy-cameras = { git = "https://github.com/Aztro-dev/smooth-bevy-cameras.git", branch = "bevy-0.13" }
egui-gizmo = "0.16.1"
bevy_mod_raycast = "0.17.0"
serde = "1.0.193"
ron = "0.8.1"
# bevy-fps-counter = "0.3.0"
bevy_round_ui = "0.2.0"
bevy_framepace = "0.15.0"
chrono = "0.4.31"
egui = "0.26.2"
bevy_asset_loader = "0.20.0"
bevy_egui = "0.25"
